fixing coursework alignment for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -606,6 +606,6 @@ body {
 }
 @media screen and (max-width: 480px) {
     .courseworkTitle {
-        margin-top: 2%;
+        margin-top: 6%;
     }
 }
